fix: invisible success dialog logo on chrome

--- a/src/pages/BuddyProject/BuddyProject.scss
+++ b/src/pages/BuddyProject/BuddyProject.scss
@@ -276,6 +276,7 @@
   }
 
   &-logo {
+    flex: 1;
     margin-right: 30px;
 
     @include common.tablet-specific {
